--- a/config.yml.example
+++ b/config.yml.example
@@ -10,9 +10,7 @@ connectors:
   - connector_id: "CjJZhY8BdngFYC_k6soN"
     service_type: "mongodb"
     api_key: "Q3pKbGhZOEJkbmdGWUNfa1lNcm46ZVFLRjVMRndTbktWanh2Zm1FMENEUQ=="
-elasticsearch:
-  host: "http://localhost:9200"
-  api_key: "Q3pKbGhZOEJkbmdGWUNfa1lNcm46ZVFLRjVMRndTbktWanh2Zm1FMENEUQ=="
+
 
 ##  The list of connector clients/customized connectors configurations.
 ##    Each object in the list requires `connector_id` and `service_type`.
@@ -36,6 +34,9 @@ elasticsearch:
 #
 ## ------------------------------- Elasticsearch -------------------------------
 #
+elasticsearch:
+  host: "http://localhost:9200"
+  api_key: "Q3pKbGhZOEJkbmdGWUNfa1lNcm46ZVFLRjVMRndTbktWanh2Zm1FMENEUQ=="
 ## The host of the Elasticsearch deployment.
 #elasticsearch.host: http://localhost:9200
 #
@@ -58,7 +59,7 @@ elasticsearch:
 #
 #
 ##  Whether SSL is used for the Elasticsearch connection.
-#elasticsearch.ssl: true
+elasticsearch.ssl: true
 #
 #
 ##  Path to a CA bundle, e.g. /path/to/ca.crt
